Completed the JS code for the game and a few updates in html and css file

--- a/style.css
+++ b/style.css
@@ -55,4 +55,8 @@ img{
     margin-top: 70px;
     padding: 10px;
     font-weight: 800;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
